[FIX] web: list selection checkbox alignment
If a list view row switches to more than one line (e.g. because of some
field which overflows), the record selection checkbox need to respect
the same alignment as other 'blocky' widget like statuses, priorities,
etc. and be middle-aligned.

Task-3515864

X-original-commit: 77252ff7201625f25667f64f07cee627d3c47b99

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -151,6 +151,7 @@
 
         .o_list_record_selector {
             width: 40px;  // Don't force to keep o_group_name width dynamic
+            vertical-align: middle;
         }
 
         .o_list_record_remove, .o_handle_cell {
